Adding model mapper changes to map product entity and response